# gpu-fan-control

./: .gitignore  README.md  meson.build
po/: POTFILES  en.po  it.po  meson.build
resources/: com.github.tudo75.gpu-fan-control.gresource.xml  com.github.tudo75.gpu-fan-control.gschema.xml  gpu-fan-control.desktop  meson.build  style.css
src/: Application.vala  application.vala  gauge.vala  meter.vala  notebook-pane.vala
